# tauri-plugin-admob-android

./: .gitignore  Cargo.toml  README.md  admob-android-exmaple.code-workspace  admob-android.code-workspace  index.d.ts  index.js  package.json  workspace.code-workspace
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: AdmobAndroid.kt  AdmobAndroidPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte  index.html
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/vanilla/public/: index.html
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/capabilities/: default.json
examples/vanilla/src-tauri/src/: lib.rs
permissions/: can_request_ads.toml  default.toml  get_consent_status.toml  initialize.toml  load_banner.toml  load_interstitial.toml  request_consent.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
