[package]
name = "tauri-plugin-admob-android"
version = "0.1.6"
links = "tauri-plugin-admob-android"
authors = ["Mehmet Uysal"]
description = "A Tauri plugin for AdMob integration on Android"
edition = "2021"
license = "MIT"
readme = "README.md"
exclude = ["/examples", "/node_modules", "/target"]

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }